--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -13,7 +14,8 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="BIENVENIDO A "
+        android:text="@string/bienvenido_a"
+        android:textColor="#263238"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,7 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/abril_fatface"
-        android:text="ARTEBOX"
+        android:text="@string/artebox"
         android:textAllCaps="true"
         android:textColor="#FFFFFF"
         android:textSize="34sp"
@@ -44,9 +46,9 @@
         android:background="#03A9F4"
         android:fontFamily="@font/acme"
 
-        android:onClick="Entraste"
 
-        android:text="GALERIA"
+        android:text="@string/galeria"
+        android:textColor="#4A148C"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -61,9 +63,9 @@
         android:background="#03A9F4"
         android:fontFamily="@font/acme"
 
-        android:onClick="Entraste"
 
-        android:text="HISTORIA"
+        android:text="@string/historia"
+        android:textColor="#4A148C"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -75,7 +77,7 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Creado por Sebastián Acevedo"
+        android:text="@string/creado_por_sebasti_n_acevedo"
         android:textColor="#FFFFFF"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -101,7 +103,7 @@
 
         android:layout_height="wrap_content"
         android:checked="false"
-        android:textColor="#F1F1F1"
+        android:textColor="#4A148C"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
