--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -5,7 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/info"
-    tools:context=".Info">
+    tools:context=".Info"
+    android:id="@+id/rootLayout"
+
+    >
+
 
 
     <TextView
