--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,10 @@
     android:layout_height="match_parent"
     android:background="@drawable/galeria"
     android:visibility="visible"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:id="@+id/rootLayout"
+    >
+
 
 
     <TextView
@@ -96,21 +99,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/boton"
         tools:ignore="MissingConstraints" />
-
-    <CheckBox
-        android:id="@+id/arte"
-        android:layout_width="wrap_content"
-
-        android:layout_height="wrap_content"
-        android:checked="false"
-        android:textColor="#4A148C"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="arte?" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
